force-app/main/default/objects/Web_Forecast__c/Web_Forecast__c.object-meta.xml
<CustomObject>
    <label>Web Forecast</label>
    <nameField>
        <label>Forecast Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Web Forecasts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>