force-app/main/default/objects/Web_Forecast__c/fields/Admin_Initials__c.field-meta.xml
<CustomField>
    <fullName>Admin_Initials__c</fullName>
    <inlineHelpText>Used only by Project/Contract Admins</inlineHelpText>
    <label>Project/Contract Admin Initials</label>
    <length>4</length>
    <type>Text</type>
</CustomField>