force-app/main/default/objects/Web_Forecast__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Web Forecasts</relationshipLabel>
    <relationshipName>Web_Forecasts</relationshipName>
    <type>Lookup</type>
</CustomField>