force-app/main/default/objects/Web_Forecast__c/fields/Delivery_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Schedule</label>
    <referenceTo>Delivery_Schedule__c</referenceTo>
    <relationshipLabel>Web Forecasts</relationshipLabel>
    <relationshipName>Web_Forecasts</relationshipName>
    <type>Lookup</type>
</CustomField>