force-app/main/default/objects/Web_Forecast__c/fields/District_Manager__c.field-meta.xml
<CustomField>
    <fullName>District_Manager__c</fullName>
    <label>District Manager</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>