force-app/main/default/objects/Web_Forecast__c/fields/EmailStatus__c.field-meta.xml
<CustomField>
    <fullName>EmailStatus__c</fullName>
    <label>EmailStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>