force-app/main/default/objects/Web_Forecast__c/fields/Items_count__c.field-meta.xml
<CustomField>
    <fullName>Items_count__c</fullName>
    <label>Items count</label>
    <summaryForeignKey>Web_Forecast_Line_Item__c.Web_Forecast_Header__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>