force-app/main/default/objects/Web_Forecast__c/fields/Items_list__c.field-meta.xml
<CustomField>
    <fullName>Items_list__c</fullName>
    <formula>HYPERLINK(&#39;/00O3A000009IGgD?pv0=&#39;&amp;Id&amp;&#39;&#39;,&#39;Full Items list&#39;,&#39;_blank&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Please verify the forecast you entered before submitting the final file</inlineHelpText>
    <label>Items list</label>
    <type>Text</type>
</CustomField>