force-app/main/default/objects/Web_Forecast__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used only By Project Administrators</description>
    <inlineHelpText>Used only By Project Administrators</inlineHelpText>
    <label>Project/Contract</label>
    <type>Checkbox</type>
</CustomField>