force-app/main/default/objects/Web_Forecast__c/fields/Sales_Rep_Email__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Email__c</fullName>
    <label>Send Email Confirmations to:</label>
    <type>Email</type>
</CustomField>