force-app/main/default/objects/Web_Forecast__c/fields/Sales_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Name__c</fullName>
    <label>Sales Rep Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>