force-app/main/default/objects/Web_Forecast__c/fields/Sales_Rep_Number__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Number__c</fullName>
    <label>Sales Rep Number</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>