force-app/main/default/objects/Web_Forecast__c/fields/Ship_to_Zipcode__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Zipcode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship to Zipcode</label>
    <referenceTo>Zipcode_DDC_RRC__c</referenceTo>
    <relationshipLabel>Web Forecasts</relationshipLabel>
    <relationshipName>Web_Forecasts</relationshipName>
    <type>Lookup</type>
</CustomField>