force-app/main/default/objects/Web_Forecast__c/fields/Week1__c.field-meta.xml
<CustomField>
    <fullName>Week1__c</fullName>
    <formula>Week_Start_Date__c - VALUE(CASE( 
MOD(  Week_Start_Date__c - DATE( 1900, 1, 7 ), 7 ), 
0, &quot;0&quot;, 
1, &quot;1&quot;, 
2, &quot;2&quot;, 
3, &quot;3&quot;, 
4, &quot;4&quot;, 
5, &quot;5&quot;, 
&quot;6&quot; 
)) + 49</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week1</label>
    <type>Date</type>
</CustomField>