force-app/main/default/objects/Web_Forecast__c/fields/Week_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Week_Start_Date__c</fullName>
    <label>Date Submitted</label>
    <required>true</required>
    <type>Date</type>
</CustomField>