force-app/main/default/objects/Web_Forecast__c/validationRules/Forecast_name_max_length.validationRule-meta.xml
<ValidationRule>
    <fullName>Forecast_name_max_length</fullName>
    <active>true</active>
    <description>max length of the forecast name is 35 character</description>
    <errorConditionFormula>LEN( Name )  &gt;  35</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Limit to 35 characters</errorMessage>
</ValidationRule>