force-app/main/default/objects/Web_Forecast__c/validationRules/Forecast_name_special_characters.validationRule-meta.xml
<ValidationRule>
    <fullName>Forecast_name_special_characters</fullName>
    <active>true</active>
    <description>Reserved characters cannot be used ; , : ~ ! @ # $ % &amp; * [ ]{ } / \ |</description>
    <errorConditionFormula>NOT(
REGEX( Name ,&quot;^[^;,:~!@#$%&amp;*{}/|\\[\\]]*$&quot;)
&amp;&amp; NOT(CONTAINS(Name , &quot;\\&quot;)) 
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Special characters ; , : ~ ! @ # $ % &amp; * [ ]{ } / \ | are not allowed</errorMessage>
</ValidationRule>