force-app/main/default/objects/Web_Forecast__c/validationRules/Ship_To_Zipcode_Non_Editable.validationRule-meta.xml
<ValidationRule>
    <fullName>Ship_To_Zipcode_Non_Editable</fullName>
    <active>true</active>
    <description>make zipcode non editable after entering items</description>
    <errorConditionFormula>AND(PRIORVALUE(Ship_to_Zipcode__c) &lt;&gt; &quot;&quot;,  PRIORVALUE(Ship_to_Zipcode__c) &lt;&gt; (Ship_to_Zipcode__c),
Items_count__c &gt; 0)</errorConditionFormula>
    <errorDisplayField>Ship_to_Zipcode__c</errorDisplayField>
    <errorMessage>Items are already added, Zipcode cannot be changed. Press Cancel to continue.</errorMessage>
</ValidationRule>