force-app/main/default/objects/Web_Forecast__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Week_Start_Date__c</columns>
    <columns>Admin_Initials__c</columns>
    <columns>District_Manager__c</columns>
    <columns>Project__c</columns>
    <columns>Sales_Rep_Email__c</columns>
    <columns>Ship_to_Zipcode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>